--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,9 @@ loader_version=0.15.3
 mod_version = 1.9.1
 maven_group = eu.midnightdust
 archives_base_name = midnightcontrols
-modrinth_id=bXX9h73M
+modrinth_id = bXX9h73M
+curseforge_id = 621768
+changelog = See changes at: https://github.com/TeamMidnightDust/MidnightControls/commits/
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
