--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.3
+minecraft_version=1.20.5
+yarn_mappings=1.20.5+build.1
+loader_version=0.15.10
 
 # Mod Properties
 mod_version = 1.9.4
@@ -17,11 +17,11 @@ changelog = See changes at: https://github.com/TeamMidnightDust/MidnightControls
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.91.3+1.20.4
+fabric_version=0.97.7+1.20.5
 sodium_version=mc1.19.2-0.4.4
 spruceui_version=5.0.3+1.20.4
-midnightlib_version=1.5.3-fabric
-modmenu_version=7.0.0
+midnightlib_version=1.5.4-fabric
+modmenu_version=10.0.0-beta.1
 emotecraft_version=2.1.3-SNAPSHOT-build.29-MC1.19-fabric
 bendylib_version=2.0.+
 emi_version=1.1.1+1.20.4+fabric
