--- a/gradle.properties
+++ b/gradle.properties
@@ -3,24 +3,24 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.20.5
-yarn_mappings=1.20.5+build.1
-loader_version=0.15.10
+minecraft_version=1.21
+yarn_mappings=1.21+build.1
+loader_version=0.15.11
 
 # Mod Properties
-mod_version = 1.9.5
+mod_version = 1.9.6
 maven_group = eu.midnightdust
 archives_base_name = midnightcontrols
+release_type=beta
 modrinth_id = bXX9h73M
 curseforge_id = 621768
-changelog = See changes at: https://github.com/TeamMidnightDust/MidnightControls/commits/
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.97.7+1.20.5
+fabric_version=0.100.1+1.21
 sodium_version=mc1.19.2-0.4.4
 spruceui_version=5.0.3+1.20.4
-midnightlib_version=1.5.4-fabric
+midnightlib_version=1.5.7-fabric
 modmenu_version=10.0.0-beta.1
 emotecraft_version=2.1.3-SNAPSHOT-build.29-MC1.19-fabric
 bendylib_version=2.0.+
