--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.21+build.1
 loader_version=0.15.11
 
 # Mod Properties
-mod_version = 1.9.6
+mod_version = 1.9.6-beta
 maven_group = eu.midnightdust
 archives_base_name = midnightcontrols
 release_type=beta
@@ -19,7 +19,7 @@ curseforge_id = 621768
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 fabric_version=0.100.1+1.21
 sodium_version=mc1.19.2-0.4.4
-spruceui_version=5.0.3+1.20.4
+obsidianui_version=0.2.5+1.21
 midnightlib_version=1.5.7-fabric
 modmenu_version=10.0.0-beta.1
 emotecraft_version=2.1.3-SNAPSHOT-build.29-MC1.19-fabric
