--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.21+build.1
 loader_version=0.15.11
 
 # Mod Properties
-mod_version = 1.9.6-beta
+mod_version = 1.9.7
 maven_group = eu.midnightdust
 archives_base_name = midnightcontrols
 release_type=beta
