--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -41,6 +41,11 @@ configurations {
 dependencies {
     neoForge "net.neoforged:neoforge:$rootProject.neoforge_version"
     modImplementation include ("maven.modrinth:midnightlib:${rootProject.midnightlib_version}-neoforge")
+    include modImplementation ("maven.modrinth:obsidianui:${project.obsidianui_version}-neoforge") {}
+    shadowBundle('org.aperlambda:lambdajcommon:1.8.1') {
+        exclude group: 'com.google.code.gson'
+        exclude group: 'com.google.guava'
+    }
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionNeoForge')
