--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ yarn_mappings=1.21+build.2
 enabled_platforms=fabric,neoforge
 
 archives_base_name=midnightcontrols
-mod_version=1.10.0
+mod_version=1.10.0-alpha.1
 maven_group=eu.midnightdust
 release_type=release
 modrinth_id = bXX9h73M
