--- a/gradle.properties
+++ b/gradle.properties
@@ -7,14 +7,14 @@ yarn_mappings=1.21+build.2
 enabled_platforms=fabric,neoforge
 
 archives_base_name=midnightcontrols
-mod_version=1.10.0-alpha.1
+mod_version=1.10.0-beta.1
 maven_group=eu.midnightdust
 release_type=release
 modrinth_id = bXX9h73M
 curseforge_id = 621768
 # Configure the IDs here after creating the projects on the websites
 
-midnightlib_version=1.5.7
+midnightlib_version=1.6.1
 
 fabric_loader_version=0.15.11
 fabric_api_version=0.100.1+1.21
@@ -25,7 +25,7 @@ yarn_mappings_patch_neoforge_version = 1.21+build.4
 quilt_loader_version=0.19.0-beta.18
 quilt_fabric_api_version=7.0.1+0.83.0-1.20
 
-sodium_version=mc1.21-0.5.11
+sodium_version=mc1.21-0.6.0-beta.1
 obsidianui_version=0.2.7+mc1.21
 modmenu_version=10.0.0-beta.1
 emotecraft_version=2.1.3-SNAPSHOT-build.29-MC1.19-fabric
