Fix packets not being optional on Neoforge

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,14 @@ org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx2048M
 
 minecraft_version=1.21
+supported_versions=1.21.1
 yarn_mappings=1.21+build.2
 enabled_platforms=fabric,neoforge
 
 archives_base_name=midnightcontrols
 mod_version=1.10.0-beta.1
 maven_group=eu.midnightdust
-release_type=release
+release_type=beta
 modrinth_id = bXX9h73M
 curseforge_id = 621768
 # Configure the IDs here after creating the projects on the websites
