Update MidnightLib & Fix various CompatHandlers

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,14 +8,14 @@ yarn_mappings=1.21+build.2
 enabled_platforms=fabric,neoforge
 
 archives_base_name=midnightcontrols
-mod_version=1.10.0-beta.1
+mod_version=1.10.0-rc.2
 maven_group=eu.midnightdust
 release_type=beta
 modrinth_id = bXX9h73M
 curseforge_id = 621768
 # Configure the IDs here after creating the projects on the websites
 
-midnightlib_version=1.6.1
+midnightlib_version=1.6.3
 
 fabric_loader_version=0.15.11
 fabric_api_version=0.100.1+1.21
